--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -12,6 +12,9 @@
     "target": "es5",
     "typeRoots": [
       "../node_modules/@types"
+    ],
+    "exclude": [
+      "../node_modules"
     ]
   }
 }
